--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /data_chung/data_test_tpl.npz
 /data_chung/data_train_tpl.npz
 /data_chung/data_valid_tpl.npz
+/data_chung/draft/test_result_tpl.npz
