--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /data_chung/data_train_tpl.npz
 /data_chung/data_valid_tpl.npz
 /data_chung/draft/test_result_tpl.npz
+/data_chung/model/finetuned/model_10e_uspto.pt
